objects/Time_Element__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Periods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked, this value is the current years value; will uncheck when new year is created.</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>This is the time that the time element ends.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Span__c</fullName>
        <label>Grade Span</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_On_Report_Card__c</fullName>
        <description>Report card display name</description>
        <label>Name On Report Card</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_School_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New School Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Time_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Time Element</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Children Time Elements</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist Value</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period Value</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Time (Reporting Period Value)</relationshipLabel>
        <relationshipName>Time1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Period?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDS_school__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS school</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>This is the time that this time element begins.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Trimester</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time</label>
    <listViews>
        <fullName>Active_School_Setups</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>School__c</columns>
        <columns>Reporting_Period_Value__c</columns>
        <columns>Parent_Time_Element__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Time_Element__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Reporting_Period_Value__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active School Times</label>
        <sharedTo>
            <role>Admin</role>
            <role>CY_HQ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Date_Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Time__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Number__c</columns>
        <columns>Parent_Time_Element__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>School__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Type__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>Reporting_Period_Value__c</columns>
        <columns>Split_School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>School_Specific</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Date_Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Time__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Number__c</columns>
        <columns>Parent_Time_Element__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>School__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Type__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>Reporting_Period_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name__c</field>
            <operation>contains</operation>
            <value>Glen</value>
        </filters>
        <label>School Specific</label>
    </listViews>
    <listViews>
        <fullName>Split_Schools</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Parent_Time_Element__c</columns>
        <columns>Reporting_Period_Value__c</columns>
        <columns>Grade_Span__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Split_School__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Split Schools</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Time Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>