objects/Time_Element__c/listViews/Active_School_Setups.listView-meta.xml
<ListView>
    <fullName>Active_School_Setups</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>School__c</columns>
    <columns>Reporting_Period_Value__c</columns>
    <columns>Parent_Time_Element__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Time_Element__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Date_Start_Date__c</field>
        <operation>equals</operation>
        <value>7/1/2015</value>
    </filters>
    <filters>
        <field>Reporting_Period_Value__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Active School Times</label>
    <sharedTo>
        <role>Admin</role>
        <role>CY_HQ</role>
    </sharedTo>
</ListView>