objects/Time_Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Date_Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Time__c</columns>
    <columns>Picklist_Value__c</columns>
    <columns>Number__c</columns>
    <columns>Parent_Time_Element__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>School__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Reporting_Period_Value__c</columns>
    <columns>Split_School__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>