objects/Time_Element__c/listViews/Split_Schools.listView-meta.xml
<ListView>
    <fullName>Split_Schools</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Picklist_Value__c</columns>
    <columns>Parent_Time_Element__c</columns>
    <columns>Reporting_Period_Value__c</columns>
    <columns>Grade_Span__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Split_School__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Split Schools</label>
</ListView>